--- a/app/src/main/res/layout/dialog_update_passwords.xml
+++ b/app/src/main/res/layout/dialog_update_passwords.xml
@@ -43,7 +43,7 @@
         android:id="@+id/textViewOldPasswordHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="@string/old_password" />
 
     <RelativeLayout
@@ -54,7 +54,7 @@
             android:id="@+id/textViewOldPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:text="@string/init_password"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -66,6 +66,15 @@
             android:layout_alignParentEnd="true"
             android:layout_alignTop="@+id/textViewOldPassword"
             android:background="@drawable/ic_copy" />
+
+        <ProgressBar
+            android:id="@+id/oldProgressBar"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:progressDrawable="@drawable/circular_progress_bar"
+            android:layout_alignTop="@+id/textViewOldPassword"
+            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
     <TextView
@@ -82,7 +91,7 @@
             android:id="@+id/textViewNewPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:text="@string/init_password"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -94,6 +103,15 @@
             android:layout_alignParentEnd="true"
             android:layout_alignTop="@+id/textViewNewPassword"
             android:background="@drawable/ic_copy" />
+
+        <ProgressBar
+            android:id="@+id/newProgressBar"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:progressDrawable="@drawable/circular_progress_bar"
+            android:layout_alignTop="@+id/textViewNewPassword"
+            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
 </LinearLayout>
