--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,12 @@
 
     <dimen name="card_margin_left_right">5dp</dimen>
     <dimen name="card_margin_grid">3dp</dimen>
+
+    <dimen name="dots_height">30dp</dimen>
+    <dimen name="dots_margin_bottom">20dp</dimen>
+    <dimen name="img_width_height">120dp</dimen>
+    <dimen name="slide_title">30dp</dimen>
+    <dimen name="slide_desc">16dp</dimen>
+    <dimen name="slide_actions">20dp</dimen>
+    <dimen name="desc_padding">40dp</dimen>
 </resources>
