--- a/app/src/main/res/layout-sw600dp/dialog_add_metadata.xml
+++ b/app/src/main/res/layout-sw600dp/dialog_add_metadata.xml
@@ -15,7 +15,7 @@
         android:text="@string/domain" />
 
     <EditText
-        android:id="@+id/editTextDomainUpdate"
+        android:id="@+id/editTextDomain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
@@ -23,13 +23,13 @@
         android:maxLines="1" />
 
     <TextView
-        android:id="@+id/textViewUsernameHeadingUpdate"
+        android:id="@+id/textViewUsernameHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/username_optional" />
 
     <EditText
-        android:id="@+id/editTextUsernameUpdate"
+        android:id="@+id/editTextUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
@@ -42,38 +42,43 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/characterset" />
-
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:columnCount="2"
-        android:rowCount="2">
+        android:rowCount="2"
+        android:layout_gravity="center">
 
         <CheckBox
-            android:id="@+id/checkBoxSpecialCharacterUpdate"
+            android:id="@+id/checkBoxLettersLow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/special_characters" />
-
-        <CheckBox
-            android:id="@+id/checkBoxLettersLowUpdate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:checked="true"
             android:text="@string/letters_lower" />
 
         <CheckBox
-            android:id="@+id/checkBoxLettersUpUpdate"
+            android:id="@+id/checkBoxLettersUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:text="@string/letters_upper" />
 
         <CheckBox
-            android:id="@+id/checkBoxNumbersUpdate"
+            android:id="@+id/checkBoxNumbers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:text="@string/numbers" />
+
+        <CheckBox
+            android:id="@+id/checkBoxSpecialCharacter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/special_characters" />
+
     </GridLayout>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -87,27 +92,52 @@
             android:text="@string/length" />
 
         <TextView
-            android:id="@+id/textViewLengthDisplayUpdate"
+            android:id="@+id/textViewLengthDisplay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="16dp"
             android:layout_toEndOf="@+id/textViewLengthHeading"
+            android:text="10"
             android:textAppearance="?android:attr/textAppearanceSmall" />
+
     </RelativeLayout>
 
     <SeekBar
-        android:id="@+id/seekBarLengthUpdate"
+        android:id="@+id/seekBarLength"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:max="16"
         android:progress="6" />
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/counter_update"
-        android:textSize="12sp"
-        android:layout_marginTop="16dp"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/textViewIterationHeading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/iteration" />
+
+        <EditText
+            android:id="@+id/EditTextIteration"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_toEndOf="@+id/textViewIterationHeading"
+            android:inputType="number"
+            android:maxLength="4" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/hint_iteration"
+            android:textSize="12sp"
+            android:layout_toEndOf="@+id/EditTextIteration"
+            android:layout_marginTop="16dp"/>
+
+    </RelativeLayout>
 
 </LinearLayout>
