TextInputLayout added for adding dialog

--- a/app/src/main/res/layout/dialog_add_metadata.xml
+++ b/app/src/main/res/layout/dialog_add_metadata.xml
@@ -8,46 +8,43 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:id="@+id/textViewDomainHeading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/domain" />
-
-    <EditText
-        android:id="@+id/editTextDomain"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:maxLength="42"
-        android:maxLines="1" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textViewUsernameHeading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/username_optional" />
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/editTextDomain"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/domain"/>
 
-    <EditText
-        android:id="@+id/editTextUsername"
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:maxLength="42"
-        android:maxLines="1" />
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/editTextUsername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/username_optional"/>
+
+    </android.support.design.widget.TextInputLayout>
 
     <TextView
         android:id="@+id/textViewSetHeading"
-        android:layout_marginTop="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="@string/characterset" />
+
     <GridLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:columnCount="2"
-        android:rowCount="2"
-        android:layout_gravity="center">
+        android:rowCount="2">
 
         <CheckBox
             android:id="@+id/checkBoxLettersLow"
@@ -133,10 +130,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/hint_iteration"
-            android:textSize="12sp"
+            android:layout_marginTop="16dp"
             android:layout_toEndOf="@+id/EditTextIteration"
-            android:layout_marginTop="16dp"/>
+            android:text="@string/hint_iteration"
+            android:textSize="12sp" />
 
     </RelativeLayout>
 
