All dialogs put in scrollview

--- a/app/src/main/res/layout/dialog_update_passwords.xml
+++ b/app/src/main/res/layout/dialog_update_passwords.xml
@@ -1,117 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textViewUpdateMasterpasswordHeading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="@string/master_password_heading" />
-
-    <EditText
-        android:id="@+id/editTextUpdateMasterpassword"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword" />
-
-    <TextView
-        android:id="@+id/textViewUpdateMasterpasswordDescitption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="@string/master_password_description"
-        android:textSize="12sp" />
-
-    <Button
-        android:id="@+id/displayButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/button_normal"
-        android:text="@string/generate"
-        android:textColor="@color/white"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/textViewOldPasswordHeading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/old_password" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <TextView
-            android:id="@+id/textViewOldPassword"
+            android:id="@+id/textViewUpdateMasterpasswordHeading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="@string/master_password_heading" />
+
+        <EditText
+            android:id="@+id/editTextUpdateMasterpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/init_password"
-            android:textAlignment="center"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <ImageButton
-            android:id="@+id/copyOldButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignTop="@+id/textViewOldPassword"
-            android:background="@drawable/ic_copy" />
-
-        <ProgressBar
-            android:id="@+id/oldProgressBar"
-            style="?android:attr/progressBarStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:progressDrawable="@drawable/circular_progress_bar"
-            android:layout_alignTop="@+id/textViewOldPassword"
-            android:layout_centerHorizontal="true" />
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/textViewNewPasswordHeading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/new_password" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            android:inputType="textPassword" />
 
         <TextView
-            android:id="@+id/textViewNewPassword"
+            android:id="@+id/textViewUpdateMasterpasswordDescitption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="@string/master_password_description"
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/displayButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/init_password"
-            android:textAlignment="center"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:layout_marginTop="16dp"
+            android:background="@drawable/button_normal"
+            android:text="@string/generate"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
-        <ImageButton
-            android:id="@+id/copyNewButton"
+        <TextView
+            android:id="@+id/textViewOldPasswordHeading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignTop="@+id/textViewNewPassword"
-            android:background="@drawable/ic_copy" />
+            android:layout_marginTop="10dp"
+            android:text="@string/old_password" />
 
-        <ProgressBar
-            android:id="@+id/newProgressBar"
-            style="?android:attr/progressBarStyleSmall"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/textViewOldPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/init_password"
+                android:textAlignment="center"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <ImageButton
+                android:id="@+id/copyOldButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignTop="@+id/textViewOldPassword"
+                android:background="@drawable/ic_copy" />
+
+            <ProgressBar
+                android:id="@+id/oldProgressBar"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/textViewOldPassword"
+                android:layout_centerHorizontal="true"
+                android:progressDrawable="@drawable/circular_progress_bar" />
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/textViewNewPasswordHeading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:progressDrawable="@drawable/circular_progress_bar"
-            android:layout_alignTop="@+id/textViewNewPassword"
-            android:layout_centerHorizontal="true" />
-    </RelativeLayout>
+            android:text="@string/new_password" />
 
-</LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/textViewNewPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/init_password"
+                android:textAlignment="center"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <ImageButton
+                android:id="@+id/copyNewButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignTop="@+id/textViewNewPassword"
+                android:background="@drawable/ic_copy" />
+
+            <ProgressBar
+                android:id="@+id/newProgressBar"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/textViewNewPassword"
+                android:layout_centerHorizontal="true"
+                android:progressDrawable="@drawable/circular_progress_bar" />
+        </RelativeLayout>
+
+    </LinearLayout>
+</ScrollView>
