--- a/app/src/main/res/layout/dialog_update_metadata.xml
+++ b/app/src/main/res/layout/dialog_update_metadata.xml
@@ -1,113 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textViewDomainHeading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/domain" />
-
-    <EditText
-        android:id="@+id/editTextDomainUpdate"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:maxLength="42"
-        android:maxLines="1" />
-
-    <TextView
-        android:id="@+id/textViewUsernameHeadingUpdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/username_optional" />
-
-    <EditText
-        android:id="@+id/editTextUsernameUpdate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:maxLength="42"
-        android:maxLines="1" />
-
-    <TextView
-        android:id="@+id/textViewSetHeading"
-        android:layout_marginTop="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/characterset" />
-
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:columnCount="2"
-        android:rowCount="2">
-
-        <CheckBox
-            android:id="@+id/checkBoxSpecialCharacterUpdate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/special_characters" />
-
-        <CheckBox
-            android:id="@+id/checkBoxLettersLowUpdate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/letters_lower" />
-
-        <CheckBox
-            android:id="@+id/checkBoxLettersUpUpdate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/letters_upper" />
-
-        <CheckBox
-            android:id="@+id/checkBoxNumbersUpdate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/numbers" />
-    </GridLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <TextView
-            android:id="@+id/textViewLengthHeading"
+            android:id="@+id/textViewDomainHeading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/domain" />
+
+        <EditText
+            android:id="@+id/editTextDomainUpdate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:maxLength="42"
+            android:maxLines="1" />
+
+        <TextView
+            android:id="@+id/textViewUsernameHeadingUpdate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/username_optional" />
+
+        <EditText
+            android:id="@+id/editTextUsernameUpdate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:maxLength="42"
+            android:maxLines="1" />
+
+        <TextView
+            android:id="@+id/textViewSetHeading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/length" />
+            android:text="@string/characterset" />
 
-        <TextView
-            android:id="@+id/textViewLengthDisplayUpdate"
+        <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_gravity="center"
+            android:columnCount="2"
+            android:rowCount="2">
+
+            <CheckBox
+                android:id="@+id/checkBoxSpecialCharacterUpdate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/special_characters" />
+
+            <CheckBox
+                android:id="@+id/checkBoxLettersLowUpdate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/letters_lower" />
+
+            <CheckBox
+                android:id="@+id/checkBoxLettersUpUpdate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/letters_upper" />
+
+            <CheckBox
+                android:id="@+id/checkBoxNumbersUpdate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/numbers" />
+        </GridLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/textViewLengthHeading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/length" />
+
+            <TextView
+                android:id="@+id/textViewLengthDisplayUpdate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="16dp"
+                android:layout_toEndOf="@+id/textViewLengthHeading"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+        </RelativeLayout>
+
+        <SeekBar
+            android:id="@+id/seekBarLengthUpdate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="16"
+            android:progress="6" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_toEndOf="@+id/textViewLengthHeading"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-    </RelativeLayout>
+            android:text="@string/counter_update"
+            android:textSize="12sp" />
 
-    <SeekBar
-        android:id="@+id/seekBarLengthUpdate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:max="16"
-        android:progress="6" />
+    </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/counter_update"
-        android:textSize="12sp"
-        android:layout_marginTop="16dp"/>
-
-</LinearLayout>
+</ScrollView>
