--- a/app/src/main/res/layout/dialog_add_metadata.xml
+++ b/app/src/main/res/layout/dialog_add_metadata.xml
@@ -20,7 +20,8 @@
                 android:id="@+id/editTextDomain"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/domain" />
+                android:hint="@string/domain"
+                android:maxLines="1" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -32,7 +33,8 @@
                 android:id="@+id/editTextUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/username_optional" />
+                android:hint="@string/username_optional"
+                android:maxLines="1" />
 
         </android.support.design.widget.TextInputLayout>
 
