--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#024265</color>
     <color name="colorPrimaryDark">#024265</color>
+    <color name="colorPrimaryDarkOpaque">#F2024265</color>
     <color name="colorAccent">#0274B2</color>
     <color name="transparent">#00000000</color>
     <color name="white">#ffffff</color>
