Generator add reduced to 1 line

--- a/app/src/main/res/layout/dialog_add_metadata.xml
+++ b/app/src/main/res/layout/dialog_add_metadata.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/domain"
-                android:maxLines="1" />
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/username_optional"
-                android:maxLines="1" />
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
