--- a/app/src/main/res/layout-sw600dp/dialog_add_metadata.xml
+++ b/app/src/main/res/layout-sw600dp/dialog_add_metadata.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/domain"
-            android:maxLines="1" />
+            android:singleLine="true" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/username_optional"
-            android:maxLines="1" />
+            android:singleLine="true" />
 
     </android.support.design.widget.TextInputLayout>
 
