On Enter cursor jumps to next edittext

--- a/app/src/main/res/layout-sw720dp/dialog_add_metadata.xml
+++ b/app/src/main/res/layout-sw720dp/dialog_add_metadata.xml
@@ -17,7 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/domain"
-            android:singleLine="true" />
+            android:inputType="text|textCapSentences"
+            android:imeOptions="actionNext" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -30,7 +31,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/username_optional"
-            android:singleLine="true" />
+            android:inputType="text|textCapSentences"
+            android:imeOptions="actionNext" />
 
     </android.support.design.widget.TextInputLayout>
 
