--- a/app/src/main/res/layout-sw600dp/dialog_update_metadata.xml
+++ b/app/src/main/res/layout-sw600dp/dialog_update_metadata.xml
@@ -18,7 +18,7 @@
         android:id="@+id/editTextDomainUpdate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
+        android:inputType="text|textEmailAddress"
         android:maxLength="42"
         android:maxLines="1" />
 
@@ -32,7 +32,7 @@
         android:id="@+id/editTextUsernameUpdate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
+        android:inputType="text|textEmailAddress"
         android:maxLength="42"
         android:maxLines="1" />
 
