--- a/app/src/main/res/layout/dialog_add_metadata.xml
+++ b/app/src/main/res/layout/dialog_add_metadata.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/editTextDomain"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text|textCapSentences"
+                android:inputType="text|textEmailAddress"
                 android:hint="@string/domain"
                 android:imeOptions="actionNext" />
 
@@ -34,7 +34,7 @@
                 android:id="@+id/editTextUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text|textCapSentences"
+                android:inputType="text|textEmailAddress"
                 android:hint="@string/username_optional"
                 android:imeOptions="actionNext" />
 
