--- a/app/src/main/res/layout/dialog_update_metadata.xml
+++ b/app/src/main/res/layout/dialog_update_metadata.xml
@@ -22,7 +22,7 @@
             android:id="@+id/editTextDomainUpdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:inputType="text|textEmailAddress"
             android:maxLength="42"
             android:maxLines="1" />
 
@@ -36,7 +36,7 @@
             android:id="@+id/editTextUsernameUpdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:inputType="text|textEmailAddress"
             android:maxLength="42"
             android:maxLines="1" />
 
